lox-tests/tests/method/missing_arguments.stderr
ERROR: Expected 2 arguments in function call but got 1
 --> 8:1
  |
8 | Foo().method(1); // expect runtime error: Expected 2 arguments but got 1.
  | ^-------------^
