lox-tests/tests/method/missing_arguments.lox
class Foo {
  method(a, b) {
    print a;
    print b;
  }
}

Foo().method(1); // expect runtime error: Expected 2 arguments but got 1.
